src/stylesheets/signin.css
h1{
    text-align: center;
    font-size:  clamp(32px, 2.5vw, 46px);
}

body{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.signFormDiv{
    display: flex;
    width:100%;
    flex-direction: column;
    align-items: center;
    margin-top: 1vh;    
}
form{
    font-size:  clamp(16px, 3vw, 32px);
    
    display:flex;
    flex-direction: column;
    width: 80%;
    max-width: 400px;
    border: 2px solid rgb(114, 109, 109); 
    padding: 10px;
    border-radius: 10px;
}

label{
    font-size:  clamp(16px, 2.5vw, 22px);
    max-width: 95%;
    margin-top: 5%;
}

input{
    margin-top: 1%;
    border-radius: 10px;
    max-width: 95%;
}

#submitButton{
    width: 25%;
    max-width: 25%;
    font-size: 15px;
    align-self: flex-end;
    text-align: center;
    margin-top: 5%;
    border-radius: 10px;
    border: 1px solid rgb(43, 39, 39)
}
#password{
    border: 0px;
    width: 85%;
    margin-left: 3%;
}
input:focus{
    outline: none;
}
.passwordDiv{
    display: flex;
    border: 1px solid rgb(43,39,39);
    border-radius: 10px;
    width: 95%;

}
p{
    max-width: fit-content;
    font-size:  clamp(12px, 2vw, 16px);
}

a:hover{
    color:crimson;
}

button{
    background-color: rgb(177, 212, 137);
}

button:hover{
    background-color: rgb(118, 194, 31);;
    color: black;
}

